# csttool

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  artifactindexreport.patch  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
contributing/architecture/: index.html
contributing/code-style/: index.html
contributing/development-setup/: index.html
docs/: index.md
docs/contributing/: development-setup.md
docs/explanation/: design-decisions.md
docs/getting-started/: data-requirements.md  installation.md  quickstart.md
docs/how-to/: troubleshooting.md
docs/reference/: parameters.md
docs/tutorials/: first-analysis.md
explanation/cst-anatomy/: index.html
explanation/design-decisions/: index.html
explanation/diffusion-mri/: index.html
explanation/limitations/: index.html
explanation/references/: index.html
explanation/tractography/: index.html
getting-started/data-requirements/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
how-to/data-formats/: index.html
how-to/multiple-subjects/: index.html
how-to/troubleshooting/: index.html
reference/output-formats/: index.html
reference/parameters/: index.html
search/: search_index.json
src/csttool/: defaults.py
tests/: conftest.py  test_cli.py  test_cli_denoise_default.py
tests/batch/: test_locking.py  test_manifest.py
tests/extract/: manual_extract_check.py  test_midline.py
tests/ingest/: test_ingest.py
tests/integration/: test_pipeline.py
tests/metrics/: test_metrics.py  (+3 more)
(+79 files in other folders)
